--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,7 @@ img {
 /****************** Overlay Responsive Nav/Hamburger Menu **************************************/
 
 .overlay {
+  display: block;
   position: absolute;
   width: 0;
   height: 100%;
@@ -125,26 +126,75 @@ img {
 }
 
 .overlay-show {
+  display: block;
   width: 100%;
-  left: 0
+  left: 0;
 }
 
 .mobile-menu {
+  display: block;
   position: absolute;
   width: 0%;
   height: 100%;
-  padding: 3rem;
+  padding: 2rem;
   top: 0;
   right: -100%;
   background-color: white;
   z-index: 1;
-  transition: 1s ease;
+  transition: 0.8s ease;
 }
 
 .mobile-menu-show {
+  display: block;
   width: 70%;
   right: 0;
 }
+
+.mobilemenu li {
+  margin-top: 1.5rem;
+}
+
+
+.mobileauthbtn {
+  display: flex;
+  margin-top: 2rem;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.mobilecommon_btn {
+  font-size: 12px;
+  font-weight: 500;
+  text-align: center;
+  color: white;
+  display: inline-block;
+  border-radius: 30px;
+  background: var(--primary-color);
+  padding: 10px 20px;
+  border: 1px solid var(--primary-color);
+  line-height: 1;
+}
+
+.mobilecommon_btn:hover {
+  background-color: #fff;
+  color: var(--primary-color);
+}
+
+.close_btn_div {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.close_btn {
+  max-width: max-content;
+  font-size: 15px;
+  font-weight: 700;
+  color: white;
+  background-color: var(--primary-color);
+  padding: 0.1rem 0.4rem;
+  border-radius: 2rem;
+}
+
 
 
 
