--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,41 +114,31 @@ img {
 /****************** Overlay Responsive Nav/Hamburger Menu **************************************/
 
 .overlay {
-  display: block;
-  position: absolute;
-  width: 0;
+  display: none;
+  position: fixed;
+  width: 100%;
   height: 100%;
   background-color: black;
-  opacity: 75%;
+  opacity: 0.75;
   top: 0;
-  left: 100%;
-  transition: 0.5s ease;
+  left: 0;
 }
 
 .overlay-show {
   display: block;
-  width: 100%;
-  left: 0;
 }
 
 .mobile-menu {
   display: block;
-  position: absolute;
-  width: 0%;
+  position: fixed;
+  width: 70%;
   height: 100%;
   padding: 2rem;
   top: 0;
-  right: -100%;
+  right: 0;
   background-color: white;
-  z-index: 1;
-  transition: 0.8s ease;
 }
 
-.mobile-menu-show {
-  display: block;
-  width: 70%;
-  right: 0;
-}
 
 .mobilemenu li {
   margin-top: 1.5rem;
