--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,8 +118,7 @@ img {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: black;
-  opacity: 0.75;
+  background-color: rgba(0, 0, 0, 0.75);
   top: 0;
   left: 0;
 }
@@ -129,7 +128,6 @@ img {
 }
 
 .mobile-menu {
-  display: block;
   position: fixed;
   width: 70%;
   height: 100%;
@@ -138,7 +136,6 @@ img {
   right: 0;
   background-color: white;
 }
-
 
 .mobilemenu li {
   margin-top: 1.5rem;
