--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,11 +307,8 @@ img {
 
 /******************* < !-- News Section --> CSS ************************/
 
-.newssection-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  column-gap: 1rem;
-  row-gap: 1.2rem;
+
+.news-card {
   margin: 1rem 0;
 }
 
