--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,17 +114,18 @@ img {
 /****************** Overlay Responsive Nav/Hamburger Menu **************************************/
 
 .overlay {
-  display: none;
+  display: block;
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.75);
   top: 0;
-  left: 0;
+  left: 100%;
+  transition: 0.5s ease;
 }
 
 .overlay-show {
-  display: block;
+  left: 0;
 }
 
 .mobile-menu {
@@ -133,8 +134,13 @@ img {
   height: 100%;
   padding: 2rem;
   top: 0;
-  right: 0;
+  right: -100%;
   background-color: white;
+  transition: 0.8s ease;
+}
+
+.mobile-menu-show {
+  right: 0;
 }
 
 .mobilemenu li {
@@ -180,6 +186,7 @@ img {
   background-color: var(--primary-color);
   padding: 0.1rem 0.4rem;
   border-radius: 2rem;
+  cursor: pointer;
 }
 
 
@@ -250,7 +257,6 @@ img {
   background-color: var(--primary-color);
   padding: 1rem 2.5rem;
 }
-
 
 .newmenu-btn {
   color: white
