--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ img {
   background-color: rgba(0, 0, 0, 0.75);
   top: 0;
   left: 100%;
+  z-index: 100;
   transition: 0.5s ease;
 }
 
@@ -136,6 +137,7 @@ img {
   top: 0;
   right: -100%;
   background-color: white;
+  z-index: 101;
   transition: 0.8s ease;
 }
 
