--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,38 +305,42 @@ img {
 
 .hero-click {
   display: flex;
+  color: white;
   align-items: center;
   justify-content: end;
-  color: white;
-  margin-top: 5rem;
   cursor: pointer;
+  margin-top: 10rem;
 }
 
 .hero-arrow {
-  width: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .section-titles {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 
 /******************* < !-- News Section --> CSS ************************/
 
+.main-container {
+  margin-bottom: 1.2rem;
+}
+
+
 .news-row {
-  margin-bottom: 1.3rem;
+  margin-bottom: 1.5rem;
 }
-
-.news-card {
-  margin: 1rem 0;
-}
-
 
 .news-cardimg {
   width: 100%;
-  height: 70%;
+  object-fit: cover;
+  height: 250px;
 }
 
 .news-cardtag {
@@ -357,6 +361,7 @@ img {
   overflow: hidden;
   font-size: large;
 }
+
 
 
 
@@ -418,6 +423,43 @@ img {
   align-items: center;
   justify-content: space-around;
   margin: 2.5rem 0;
+}
+
+
+/******************* < !-- Membership Section --> CSS ************************/
+
+.mem-card {
+  width: 30%;
+  margin: 2rem 0;
+  border: 1px solid var(--primary-color);
+  padding: 1.2rem 1rem;
+  border-radius: .5rem;
+}
+
+.card-title {
+  color: var(--primary-color);
+  margin: 1rem 0;
+  font-weight: 600;
+}
+
+.card-price {
+  font-size: x-large;
+  font-weight: 500;
+}
+
+.mem-card ul li {
+  margin: 1rem 0;
+  font-size: medium;
+}
+
+
+.mem-button {
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: 600;
+  padding: 0.3rem 0.7rem;
+  border: none;
+  border-radius: .3rem;
 }
 
 
