wow animate fadeIn effect added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,68 @@ img {
   color: var(--secondary-color);
 }
 
+/* Loading Spinner*/
+
+.loading-spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.lds-ring {
+  /* change color here */
+  color: var(--primary-color)
+}
+
+.lds-ring,
+.lds-ring div {
+  box-sizing: border-box;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 50px;
+  height: 50px;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  margin: 8px;
+  border: 6px solid currentColor;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: currentColor transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /****************** Overlay Responsive Nav/Hamburger Menu **************************************/
 
 .overlay {
@@ -442,9 +504,12 @@ img {
   margin: 1rem 0;
 } */
 
+
+
 .accordion-button {
   color: var(--primary-color);
 }
+
 
 .accordion-button:not(.collapsed) {
   color: #e84747;
@@ -469,11 +534,12 @@ img {
 /******************* < !-- Our Trusted Partners Section --> CSS ************************/
 
 #otp {
+  display: none;
   padding-top: 5rem;
 }
 
 .pngico {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
   width: 7rem;
