membership page animations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,9 +500,9 @@ img {
   color: var(--secondary-color);
 }
 
-/* .faq-accordian-container {
+.faq-accordion-container {
   margin: 1rem 0;
-} */
+}
 
 
 
