--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -534,7 +534,7 @@ img {
 /******************* < !-- Our Trusted Partners Section --> CSS ************************/
 
 #otp {
-  display: none;
+  display: flex;
   padding-top: 5rem;
 }
 
