--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,9 +356,20 @@ img {
   gap: 2rem;
 }
 
+.nav-end {
+  display: flex;
+  align-items: center;
+  gap: 0.7rem;
+}
+
 .auth-btn {
   display: flex;
   gap: 0.7rem;
+}
+
+.search {
+  width: 1.5rem;
+  cursor: pointer;
 }
 
 .hbmenu {
@@ -696,6 +707,37 @@ img {
   margin-top: 0.8rem;
   border-radius: 0.5rem;
   cursor: pointer;
+}
+
+/********* Search News Card ************/
+
+.search-card-main {
+  display: flex;
+  border-radius: 0.5rem;
+  border: 1px solid var(--secondary-color);
+  margin: 1rem 0;
+  box-shadow: 4px 0 4px -4px var(--secondary-color),
+    -4px 0 4px -4px var(--secondary-color),
+    0 4px 4px -4px var(--secondary-color)
+}
+
+.search-card-main h5 {
+  color: var(--primary-color);
+  margin: 1rem 0;
+}
+
+.search-card-desc {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.search-card-img {
+  width: 40%;
+  height: 200px;
+  margin-right: 1rem;
+  object-fit: cover;
+  border-radius: 0.2rem 0 0 0.2rem;
 }
 
 /*********************  Default-CSS  End *********************/
