--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -724,11 +724,16 @@ img {
 .search-card-main h5 {
   color: var(--primary-color);
   margin: 1rem 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
 
 .search-card-desc {
-  -webkit-line-clamp: 2;
+  display: -webkit-box;
   -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
   overflow: hidden;
 }
 
