--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -322,6 +322,25 @@
     gap: 1.2rem;
   }
 
+  .search-card-main h5 {
+    font-size: small;
+  }
+
+  .search-card-desc {
+    font-size: x-small;
+  }
+
+  .search-card-img {
+    width: 40%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 0.2rem 0 0 0.2rem;
+  }
+
+  .card-details .news-cardtag {
+    font-size: x-small;
+  }
+
 }
 
 @media (max-width: 375px) {}
