user login-logout api

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,45 @@ img {
   visibility: visible;
 }
 
+.messages-success {
+  display: flex;
+  position: absolute;
+  top: 5%;
+  max-width: max-content;
+  background-color: rgb(156, 219, 156);
+  color: rgb(11, 87, 11);
+  font-size: large;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  z-index: 10;
+}
+
+.messages-error {
+  display: flex;
+  position: absolute;
+  top: 1%;
+  max-width: max-content;
+  background-color: rgb(230, 140, 140);
+  color: rgb(175, 57, 57);
+  font-size: large;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  z-index: 10;
+}
+
+.messages-warning {
+  display: flex;
+  position: absolute;
+  top: 5%;
+  max-width: max-content;
+  background-color: rgb(230, 226, 140);
+  color: rgb(175, 165, 57);
+  font-size: large;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  z-index: 10;
+}
+
 /****************** Overlay Responsive Nav/Hamburger Menu **************************************/
 
 .overlay {
