--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -346,6 +346,19 @@
     row-gap: 3rem;
   }
 
+    .messages-success {
+      display: flex;
+      position: absolute;
+      top: 2%;
+      max-width: max-content;
+      background-color: rgb(156, 219, 156);
+      color: rgb(11, 87, 11);
+      font-size: large;
+      font-weight: 600;
+      padding: 0.5rem 2rem;
+      z-index: 10;
+    }
+
 }
 
 @media (max-width: 375px) {}
